--- a/main.css
+++ b/main.css
@@ -1,97 +1,113 @@
-* {
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #9ad99b;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-body {
-    background-color: #E7E7E7;
-    padding-top: 100px;
+.container {
+    max-width: 500px;
+    width: 90%;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
 }
 
 header {
     display: flex;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 header img {
     height: 36px;
-    margin-right: 16px;
+    margin-right: 10px;
 }
 
 header h1 {
-    font-size: 40px;
+    font-family: 'Martel', serif;
+    font-size: 32px;
     font-weight: bold;
-}
-
-.container {
-    max-width: 960px;
-    width: 100%;
-    margin: 0 auto;
+    color: #333;
 }
 
 form {
     display: flex;
-    max-width: 640px;
-    width: 100%;
-    justify-content: space-between;
-    margin-bottom: 56px;
+    flex-direction: column;
+    gap: 15px;
+
 }
 
-form input {
-    font-size: 24px;
-    background-color: #fff;
-    border: none;
-    border-bottom: 2px solid #000;
-    padding: 8px;
-}
-
-form button {
-    background-color: #009432;
+button {
+    background-color: #56a768;
     color: #fff;
-    font-size: 24px;
-    font-weight: bold;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+button:focus {
+    outline: none;
+}
+
+button:hover {
+    background-color: #77bdb5;
+}
+
+button:active {
+    transform: scale(1.05); /* Aumenta a escala do botão ao ser clicado */
+}
+
+input[type="text"],
+input[type="tel"],
+input[type="submit"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    transition: border-color 0.3s ease-in-out;
+}
+
+input[type="text"]:focus,
+input[type="tel"]:focus,
+input[type="submit"]:focus {
+    outline: none;
+    border-color: #009688;
+}
+
+input[type="submit"] {
+    background-color: #009688;
+    color: #fff;
     border: none;
     cursor: pointer;
-    padding: 8px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+input[type="submit"]:hover {
+    background-color: #77bdb5;
 }
 
 table {
     width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
 }
 
-table th {
-    border-bottom: 2px solid #000;
-    padding: 16px;
-    font-size: 24px;
+th,
+td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #56a768;
+}
+
+th {
     font-weight: bold;
 }
 
-table td {
-    padding: 16px 0;
-    text-align: center;
-    font-size: 18px;
-    border-bottom: 1px solid rgba(0, 0, 0.1);
-}
-
-table td img {
-    height: 30px;
-}
-
-.resultado {
-    padding: 8px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #000;
-    border-radius: 3px;
-}
-
-.aprovado {
-        background-color:#009432;
-}
-
-.reprovado {
-    background-color: red;
-}
